kube/multi/service.yml
apiVersion: v1
kind: Service
metadata:
  name: portainer-demo-service
spec:
  type: ClusterIP
  selector:
    app: portainer-demo-deployment
  ports:
  - port: 80
    targetPort: 80
