kube/multi/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: portainer-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: gitops-demo.portainer.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: portainer-demo-service
            port:
              number: 80
